cd/infra/cm-envoy-config.yaml
apiVersion: v1
data:
  envoy.yaml: |-
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              access_log:
              - name: envoy.file_access_log
                config:
                  path: "/dev/stdout"
              generate_request_id: true
              tracing:
                operation_name: egress
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  cors:
                    enabled: false
                    allow_origin: ["*"]
                    allow_methods: POST, GET, OPTIONS, PUT, DELETE
                    allow_headers: "Content-Type,Referer,Origin,connection,User-Agent,accept-Language,expires,pragma,Cache-control,content-length,Authorization,content-type,Accept,Ocp-Apim-Subscription-Key,authorisation,authorization,version,Sec-Fetch-Dest,User-Agent"

                    allow_credentials: false
                    expose_headers: X-Custom-Header
                  routes:
                  - match:
                      prefix: "/event-ping"
                    route:
                      host_rewrite: ping-event
                      cluster: service_event_ping
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/event-pong"
                    route:
                      host_rewrite: pong-event
                      cluster: service_event_pong
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/pabs-msg-from-file"
                    route:
                      host_rewrite: pabs-msg-from-file
                      cluster: service_pabs-msg-from-file
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/pabs-msg-from-telegram"
                    route:
                      host_rewrite: pabs-msg-from-telegram
                      cluster: service_pabs-msg-from-telegram
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/pabs-msg-to-signal"
                    route:
                      host_rewrite: pabs-msg-to-signal
                      cluster: service_pabs-msg-to-signal
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/pabs-msg-to-update"
                    route:
                      host_rewrite: pabs-msg-to-update
                      cluster: service_pabs-msg-to-update
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/pabs-msg-to-other"
                    route:
                      host_rewrite: pabs-msg-to-other
                      cluster: service_pabs-msg-to-other
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/pabs-signal-controller"
                    route:
                      host_rewrite: pabs-signal-controller
                      cluster: service_pabs-signal-controller
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/pabs-signal-entry-worker"
                    route:
                      host_rewrite: pabs-signal-entry-worker
                      cluster: service_pabs-signal-entry-worker
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/pabs-signal-update-worker"
                    route:
                      host_rewrite: pabs-signal-update-worker
                      cluster: service_pabs-signal-update-worker
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/binance-rest-controller"
                    route:
                      host_rewrite: binance-rest-controller
                      cluster: service_binance-rest-controller
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/binance-ws-controller"
                    route:
                      host_rewrite: binance-ws-controller
                      cluster: service_binance-ws-controller
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/event-logging-controller"
                    route:
                      host_rewrite: event-logging-controller
                      cluster: service_event-logging-controller
                    decorator:
                        operation: checkAvailability
                  - match:
                      prefix: "/camunda"
                    route:
                      host_rewrite: ""
                      cluster: service_pabs-camunda
                    decorator:
                        operation: checkAvailability
              http_filters:
              - name: envoy.router
                config: {}
      clusters:
      - name: service_event_ping
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: ping-event
              port_value: 8080
      - name: service_event_pong
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: pong-event
              port_value: 8080
      - name: service_pabs-msg-from-telegram
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: pabs-msg-from-telegram
              port_value: 8080
      - name: service_pabs-msg-from-file
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: pabs-msg-from-file
              port_value: 8080
      - name: service_pabs-msg-to-signal
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: pabs-msg-to-signal
              port_value: 8080
      - name: service_pabs-msg-to-update
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: pabs-msg-to-update
              port_value: 8080
      - name: service_pabs-msg-to-other
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: pabs-msg-to-other
              port_value: 8080
      - name: service_pabs-signal-controller
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: pabs-signal-controller
              port_value: 8080
      - name: service_binance-rest-controller
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: binance-rest-controller
              port_value: 8080
      - name: service_binance-ws-controller
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: binance-ws-controller
              port_value: 8080
      - name: service_event-logging-controller
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: event-logging-controller
              port_value: 8080
      - name: service_pabs-signal-entry-worker
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: pabs-signal-entry-worker
              port_value: 8080
      - name: service_pabs-signal-update-worker
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: pabs-signal-update-worker
              port_value: 8080
      - name: service_pabs-camunda
        connect_timeout: 10s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts:
          - socket_address:
              address: camunda
              port_value: 8080
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: py-event-sys
