cd/infra/dep-camunda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camunda
  name: camunda
  namespace: py-event-sys
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: camunda
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: camunda
    spec:
      containers:
      - image: harbor.marnus.com:443/library/py-event-sys-camunda:current
        imagePullPolicy: Always
        name: camunda
        volumeMounts:
        - mountPath: /camunda/webapps/examples
          name: empty-dir
        - mountPath: /camunda/webapps/h2
          name: empty-dir
        - mountPath: /camunda/webapps/camunda-invoice
          name: empty-dir
        - mountPath: /camunda/conf/bpm-platform.xml
          name: camunda-config
          subPath: bpm-platform.xml
        ports:
        - containerPort: 8080
          name: camunda
          protocol: TCP
        env:
        - name: DB_DRIVER
          value: com.mysql.cj.jdbc.Driver
        - name: DB_USERNAME
          value: pyeventsys
        - name: DB_PASSWORD
          value: pyeventsys
        - name: DB_URL
          value: jdbc:mysql://mysql:3306/camunda?createDatabaseIfNotExist=true&charset=utf8mb4
        - name: DB_VALIDATE_ON_BORROW
          value: "true"
        - name: WAIT_FOR
          value: mysql:3306
        - name: JMX_PROMETHEUS
          value: "true"
        - name: DEBUG
          value: "true"
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /engine-rest/process-definition/count
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 30
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: registrypullsecret
      - name: harbor-marnus
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: empty-dir
        emptyDir: {}
      - name: camunda-config
        configMap:
          name: camunda-config
