cd/infra/namespace-py-event-sys.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: py-event-sys
spec:
  finalizers:
  - kubernetes
