cd/infra/svc-camunda-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camunda
    type: ClusterIP
  name: camunda-lb
  namespace: py-event-sys
spec:
  ports:
  - name: camunda
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: camunda
  sessionAffinity: None
  type: LoadBalancer
